[package]
name = "egui-fltk-frontend"
version = "0.18.2"
edition = "2021"
rust-version = "1.60.0"
authors = ["Ar37-rs <adyaro37@gmail.com>"]
description = "FLTK frontend for Egui WGPU backend"
documentation = "https://docs.rs/egui-fltk-frontend"
readme = "README.md"
keywords = ["GUI", "egui", "fltk", "wgpu"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ar37-rs/egui-fltk-frontend"
resolver = "2"
exclude = ["screenshot/"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal use case
# fltk = { version = "1.3", features = ["raw-window-handle", "fltk-bundled"] }
fltk = { version = "1.3", features = ["raw-window-handle", "enable-glwindow"] }
egui = "0.18"
egui-wgpu = "0.18"
pollster = "0.2"

[target."cfg(windows)".dependencies.copypasta]
version = "0.8"

[target."cfg(all(unix, not(any(target_os=\"linux\", target_os=\"freebsd\"))))".dependencies.copypasta]
version = "0.8"

[target."cfg(all(unix, any(target_os=\"linux\", target_os=\"freebsd\")))".dependencies.copypasta]
version = "0.8"
default-features = false

[features]
default = ["x11"]
x11 = ["copypasta/x11"]
wayland = ["x11", "copypasta/wayland", "fltk/use-wayland"]
fltk-bundled = ["fltk/fltk-bundled"]
fltk-shared = ["fltk/fltk-shared"]
fltk-no-pango = ["fltk/no-pango"]
fltk-no-gdiplus = ["fltk/no-gdiplus"]
fltk-single-threaded = ["fltk/single-threaded"]
system-fltk = ["fltk/system-fltk"]
system-libjpeg = ["fltk/system-libjpeg"]
system-libpng = ["fltk/system-libpng"]
system-zlib = ["fltk/system-zlib"]

[dev-dependencies]
egui_demo_lib = "0.18"
