[package]
name = "egui-fltk-frontend"
version = "0.22.0"
edition = "2021"
rust-version = "1.61.0"
authors = ["Ar37-rs <adyaro37@gmail.com>"]
description = "FLTK frontend for Egui WGPU backend"
documentation = "https://docs.rs/egui-fltk-frontend"
readme = "README.md"
keywords = ["GUI", "egui", "fltk", "wgpu"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ar37-rs/egui-fltk-frontend"
resolver = "2"
exclude = ["screenshot/"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# build = "build.rs"

[dependencies]
bytemuck = "1.0.0"
egui = { version = "0.19.0", features = ["bytemuck"] }
# internal use case only
# fltk = { version = "1.3.15", features = ["fltk-bundled", "raw-window-handle"] }
fltk = { version = ">=1.3.15,<2.0.0", features = ["raw-window-handle"] }
raw-window-handle = "0.4.3"
pollster = "0.2.0"
wgpu = { version = "0.13" }
fxhash = "0.2.0"
type-map = "0.5.0"

[target."cfg(windows)".dependencies.arboard]
version = "2.0.0"

[target."cfg(all(unix, not(any(target_os=\"linux\", target_os=\"freebsd\"))))".dependencies.arboard]
version = "2.0.0"

[target."cfg(all(unix, any(target_os=\"linux\", target_os=\"freebsd\")))".dependencies.arboard]
version = "2.0.0"
default-features = false

[features]
default = ["enable-glwindow"]
debug = []
wayland = ["fltk/use-wayland"]
enable-glwindow = ["fltk/enable-glwindow"]
fltk-bundled = ["fltk/fltk-bundled"]
fltk-shared = ["fltk/fltk-shared"]
fltk-no-pango = ["fltk/no-pango"]
fltk-no-gdiplus = ["fltk/no-gdiplus"]
fltk-single-threaded = ["fltk/single-threaded"]
system-fltk = ["fltk/system-fltk"]
system-libjpeg = ["fltk/system-libjpeg"]
system-libpng = ["fltk/system-libpng"]
system-zlib = ["fltk/system-zlib"]
wgpu-angle = ["wgpu/angle"]
wgpu-glsl = ["wgpu/glsl"]
wgpu-replay = ["wgpu/replay"]
wgpu-spirv = ["wgpu/spirv"]
wgpu-trace = ["wgpu/trace"]
wgpu-vulkan-portability = ["wgpu/vulkan-portability"]

[[example]]
name = "main"

[[example]]
name = "custom3d"

[[example]]
name = "smaa"

[[example]]
name = "image"

[dev-dependencies]
egui_demo_lib = "0.19.0"
smaa = "0.7.0"
