[package]
name = "image_network"
version = "0.15.0"
edition = "2018"
authors = ["Ar37-rs <adyaro37@gmail.com>"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# WGPU requires cargo resolver v2
resolver = "2"

[dependencies]
# With fltk-bundled (faster build time) features work on windows, linux and mac x64 only (requires curl and tar)
# egui-fltk-frontend = { version = "0.15", features = ["fltk-bundled"] }
egui-fltk-frontend = "0.15"
egui_wgpu_backend = "0.15"
flowync = "1"
pollster = "0.2"
reqwest = "0.11"
tokio = { version = "1", features = ["rt-multi-thread"] }
