[package]
name = "main_example"
version = "0.19"
edition = "2021"
rust-version = "1.60"
authors = ["Ar37-rs <adyaro37@gmail.com>"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# WGPU requires cargo resolver v2
resolver = "2"

[dependencies]
# With fltk-bundled (faster build time) features work on windows, linux and mac x64 only (requires curl and tar)
# egui-fltk-frontend = { version = "0.19", features = ["fltk-bundled"] }
egui-fltk-frontend = "0.19"
egui_demo_lib = "0.18"
