[package]
name = "main_example"
version = "0.19.1"
edition = "2021"
rust-version = "1.60"
authors = ["Ar37-rs <adyaro37@gmail.com>"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# WGPU requires cargo resolver v2
resolver = "2"

[dependencies]
# internal use case
# egui-fltk-frontend = { version = "0.19", path = "../../../egui-fltk-frontend",  features = ["fltk-enable-glwindow", "fltk-bundled"] }

# enable the "fltk-enable-glwindow" features for more windowing compatibility.
egui-fltk-frontend = { version = "0.19",  features = ["fltk-enable-glwindow"] }
egui_demo_lib = "0.18"
