[package]
name = "main_example"
version = "0.22.0"
edition = "2021"
rust-version = "1.61"
authors = ["Ar37-rs <adyaro37@gmail.com>"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# WGPU requires cargo resolver v2
resolver = "2"

[dependencies]
egui-fltk-frontend = "0.22.0"
egui_demo_lib = "0.19.0"
